--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
     "name": "realtime-express",
     "version": "1.0.0",
     "description": "realtime chat through a youtube interface",
-    "keywords": [
-        "node", "express", "socket.io", "bcrypt", "jwt", "gulp", "webpack", "babel", "sass"
-    ],
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
@@ -25,6 +22,10 @@
         "express": "^4.16.2",
         "gitignore": "^0.6.0",
         "nodemon": "^1.12.1",
+        "pug": "^2.0.0-rc.4",
         "socket.io": "^2.0.4"
+    },
+    "devDependencies": {
+        "tachyons": "^4.9.0"
     }
 }
